--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h3>Fetch API Projects:</h3>
         <ul>
             <li>
-                <a target="_blank" href="post/index.html"
+                <a target="_blank" href="posts/index.html"
                     >Post</a
                 >
             </li>
